# zerogeo

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-base.txt  requirements-test.txt  requirements.txt
config/: quinhagak.yaml  quinhagak_test.yaml
docs/: INSTALL.md  INSTALLATION_COMMANDS.md  QUICKSTART.md  QUINHAGAK_WORKFLOW.md  README.md  annotation_guide.md  automatic_install_summary.md  configuration_guide.md  dependencies.md  dependency_update_summary.md  index.md  install_summary.md  manual_annotation_guide.md  model_setup.md  pipeline_complete.md  post_install.md  quickstart.md  quickstart_single_image.md  reassemble_guide.md  reviewer_guide.md  setup.md  single_requirements_update.md  smart_install_summary.md  streamlined_pipeline.md
docs/development/: CLEANUP_SUMMARY.md  END_TO_END_TEST_RESULTS.md  GROUNDING_DINO_FIX_SUMMARY.md  RESTRUCTURING_SUMMARY.md  UNIFIED_PIPELINE_SUMMARY.md  UNIT_TESTS_SUMMARY.md
examples/: demo_reviewer.py  example_config_usage.py  example_tiling.py  example_workflow.py
input/: .gitignore  README.md
output/: .gitignore  README.md
scripts/: annotate_tiles.py  check_dependencies.py  check_hardware.py  civic-annotate  civic.py  civic.py.old  create_patches.py  create_subset.py  example_train.py  launch_reviewer.py  predict.py  prepare_for_annotation.py  reassemble_masks.py  sentinel2_water_land_classification.js  smart_install.py  tile_image.py  train.py  validate_config.py  visualize_annotation.py
src/civic/: __init__.py  cli.py
src/civic/utils/: __init__.py  path_manager.py
src/river_segmentation/: __init__.py
src/river_segmentation/annotation/: __init__.py  batch_annotator.py  review_session.py  reviewer_ui.py  reviewer_webapp.py  tiler.py  zero_shot_annotator.py
src/river_segmentation/annotation/static/css/: reviewer.css
src/river_segmentation/annotation/static/js/: reviewer.js
src/river_segmentation/annotation/templates/: reviewer.html
src/river_segmentation/config/: __init__.py  loader.py  schema.py
src/river_segmentation/data/: __init__.py  dataset.py  transforms.py
src/river_segmentation/models/: __init__.py  unet.py
src/river_segmentation/training/: __init__.py  losses.py  metrics.py  trainer.py
src/river_segmentation/utils/: __init__.py  hardware_detect.py  image_utils.py  io.py  logging_utils.py  model_downloader.py  visualization.py
tests/: __init__.py  conftest.py  test_basic.py  test_config.py  test_tiler.py
tests/unit/: test_batch_annotator.py  test_image_loading.py  test_reviewer_webapp.py  test_zero_shot_annotator.py
